# microservices

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.django  Dockerfile.fastapi  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
nginx/: nginx.conf
task_manager/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
task_manager/nginx/: django.conf
task_manager/task_manager/: asgi.py  settings.py  urls.py  wsgi.py
task_manager/tasks/: models.py  routers.py  serializers.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: factories.py  test_tasks.py
users_api/: .env  pyproject.toml
users_api/app/: config.py  logger.py  main.py  schemas.py  services.py
users_api/app/routers/: user.py
users_api/tests/: test_main.py
