[tool.poetry]
name = "testservices"
version = "0.1.0"
description = ""
authors = ["Egor Fironov <131647674+Egor1511@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
