[tool.poetry]
name = "users-api"
version = "0.1.0"
description = ""
authors = ["Egor Fironov <131647674+Egor1511@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
httpx = "^0.27.2"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
